force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <label>Комната</label>
    <nameField>
        <label>Номер комнаты</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Комнаты</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>