force-app/main/default/objects/Room__c/fields/Available_Places__c.field-meta.xml
<CustomField>
    <fullName>Available_Places__c</fullName>
    <label>Доступно мест</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>