force-app/main/default/objects/Room__c/fields/Dormitory__c.field-meta.xml
<CustomField>
    <fullName>Dormitory__c</fullName>
    <label>Общежитие</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Комнаты</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>