force-app/main/default/objects/Room__c/fields/Parent_Room__c.field-meta.xml
<CustomField>
    <fullName>Parent_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Используется для создания вложенности блоков в комнату</description>
    <label>Родительская комната</label>
    <referenceTo>Room__c</referenceTo>
    <relationshipLabel>Комнаты</relationshipLabel>
    <relationshipName>Child_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>