force-app/main/default/objects/Room__c/fields/Room_Leader__c.field-meta.xml
<CustomField>
    <fullName>Room_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Староста комнаты</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Room__pr.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Комнаты (староста)</relationshipLabel>
    <relationshipName>Leader_Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>